; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_all_fields.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_add_all_fields.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.detail_data = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.detail_data*)* @add_all_fields to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_all_fields(i32 %0, %struct.detail_data* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.detail_data*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.detail_data* %1, %struct.detail_data** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = load %struct.detail_data*, %struct.detail_data** %4, align 8
  %7 = call i32 @add_v1_fields(i32 %5, %struct.detail_data* %6)
  %8 = load i32, i32* %3, align 4
  %9 = load %struct.detail_data*, %struct.detail_data** %4, align 8
  %10 = call i32 @add_all_extensions(i32 %8, %struct.detail_data* %9)
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.detail_data*, %struct.detail_data** %4, align 8
  %13 = call i32 @add_properties(i32 %11, %struct.detail_data* %12)
  ret void
}

declare dso_local i32 @add_v1_fields(i32, %struct.detail_data*) #1

declare dso_local i32 @add_all_extensions(i32, %struct.detail_data*) #1

declare dso_local i32 @add_properties(i32, %struct.detail_data*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
